<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FindADesk</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <!-- Find Location Activity -->
    <string name="search_btn">Rechercher</string>
    <string name="search_btn_maps">Rechercher Carte</string>
    
    <string-array name="city_data">
        <item>Paris</item>
        <item>Créteil</item>
        <item>Nanterre</item>
    </string-array>
    
    <string-array name="product_type_data">
        <item>Bureau</item>
        <item>Salle de réunion</item>
    </string-array>
    
    <string-array name="type_carte">
        <item>Visa</item>
        <item>Visa Electron</item>
        <item>MasterCard</item>
    </string-array>
    
    <string-array name="min_seats_data">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>4 et plus</item>
    </string-array>
    
    <string-array name="min_price_data">
        <item>10 €</item>
        <item>20 €</item>
        <item>30 €</item>
        <item>40 €</item>
        <item>40€ et plus</item>
    </string-array>
    
    <string-array name="max_price_data">
        <item>10 €</item>
        <item>20 €</item>
        <item>30 €</item>
        <item>40 €</item>
        <item>40€ et plus</item>
    </string-array>
    
    <string name="product_type_text">Type de produit : </string>
    <string name="location_spinner_text">Lieu : </string>
    <string name="from_spinner_text">À partir de : </string>
    <string name="min_seats_text">Nombre de places minimum : </string>
    <string name="min_price_text">Prix minimum : </string>
    <string name="max_price_text">Prix maximum : </string>
    
    <!-- Nom des fenetres -->
    <string name="reservation_activity">Réservation</string>
    <string name="list_workspace_activity">Liste des workspaces</string>
	<string name="find_location_activity">Trouver un local</string>
	<string name="no_workspaces_activity">Aucun résultat</string>
    
    
    <!-- Home Activity -->
    <string name="reservations_btn">Mes réservations</string>
    <string name="find_loc_btn">Trouver un emplacement</string>
    
    
    <!-- Reservation Activity -->
    <string name="type_workspace">Type workspace : </string>
    <string name="adresse_workspace">Adresse : </string>
    <string name="seats_number_workspace">Nombre de places assises : </string>
    <string name="email_admin_workspace">Email de l\'admin : </string>
    <string name="prix">Prix : </string>
    <string name="description">Description : </string>
    <string name="reserver_btn">Réserver</string>
    
    <!-- Autres -->
    <string name="empty">Empty</string>
    <string name="mettre_en_favori">Mettre en favori</string>
    
    <!-- No Workspaces Activity -->
	<string name="no_workspaces">Aucune offre ne correspond à vos critères</string>
	<string name="go_back_message">Retour</string>
	
	<!-- Customer Reservations -->
	<string name="office_desc">Bureau : </string>
	<string name="date_begin">Début : </string>
	<string name="date_end">Fin : </string>
	
	<!-- Login Activity -->
	<string name="login_btn">Login</string>
	<string name="adresse_email">Adresse email</string>
	<string name="pwd">Mot de passe</string>
	<string name="identify_text">Identifiez-vous</string>
	<string name="subscription_btn">S\'inscrire</string>
	
	<!-- Subscription Activity -->
	<string name="lastname">Nom</string>
	<string name="firstname">Prénom</string>
	<string name="adresse">Adresse</string>
	<string name="phone">Téléphone</string>
	<string name="company">Société</string>
	<string name="email">Adresse email</string>
	<string name="password">Mot de passe</string>
	
</resources>
